<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#474747"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        tools:context=".AddCustomer">



        <TextView
            android:id="@+id/personalinfo_label"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/personal_information"
            android:textColor="#FF84C9FB"
            android:gravity="center"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/personalinfo_label"
            android:layout_marginTop="30dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/first_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                tools:text="Name"
                android:id="@+id/first_name"
                android:textAllCaps="true"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_layout"
            app:layout_constraintTop_toBottomOf="@+id/first_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:hint="@string/Surname"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                tools:text="Surname"
                android:id="@+id/surname"
                android:textAllCaps="true"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>




        <TextView
            app:layout_constraintTop_toBottomOf="@+id/surname_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#FF84C9FB"
            android:gravity="center"
            android:textSize="27sp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/contactInfo_label"
            android:text="@string/contact_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            app:layout_constraintTop_toBottomOf="@+id/contactInfo_label"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                tools:text="blankatrene@gmail.com"
                android:id="@+id/email"
                android:textAllCaps="true"
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:hint="@string/phone"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                tools:text="067 137 1326"
                android:id="@+id/phone"
                android:textAllCaps="true"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/service_spinner"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@android:layout/simple_list_item_1"
            app:layout_constraintTop_toBottomOf="@+id/phone_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <Spinner
            android:id="@+id/product_spinner"
            android:layout_marginTop="20dp"
            tools:listitem="@android:layout/simple_list_item_1"
            app:layout_constraintTop_toBottomOf="@+id/service_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/price_spinner"
            android:layout_marginTop="20dp"
            tools:listitem="@android:layout/simple_list_item_1"
            app:layout_constraintTop_toBottomOf="@+id/product_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/payment_method_spinner"
            android:layout_marginTop="20dp"
            tools:listitem="@android:layout/simple_list_item_1"
            app:layout_constraintTop_toBottomOf="@+id/price_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/terms_checkbox"
            android:layout_width="wrap_content"
            android:textColor="#FF84C9FB"
            app:layout_constraintTop_toBottomOf="@+id/payment_method_spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/by_clicking_the_submit_button_below_you_confirm_that_you_are_in_agreement_with_the_terms_and_conditions_of_kev_the_barber_please_view_our_terms_and_conditions_for_administering_our_services"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="367dp"
            android:layout_height="58dp"
            android:layout_marginTop="50dp"
            app:cornerRadius="20dp"
            app:strokeColor="#FF84C9FB"
            android:text="@string/submit_infomation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terms_checkbox" />

        <ProgressBar
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

